SASQL/SASQL/target/generated-sources/antlr4/br/ufscar/dc/compiladores/AlgumaParser.java
// Generated from br/ufscar/dc/compiladores/Alguma.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores;

import br.ufscar.dc.compiladores.alguma.sintatico.Arquivo;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AlgumaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, DATE=8, PROCSQL=9, 
		QUIT=10, CREATETABLE=11, SELECT=12, PV=13, FORMAT=14, OPERADOR=15, INT=16, 
		REAL=17, VARCHAR=18, ERROR_VARCHAR=19, BOOLEAN=20, DATE9=21, MES=22, AS=23, 
		FROM=24, WHERE=25, AND=26, INSERT=27, DROPTABLE=28, ABREPARCH=29, FECHAPARCH=30, 
		DELETE=31, EXPORT=32, VALUES=33, FILEPATH=34, FILETYPE=35, FILENAME=36, 
		IDENT=37, COMENTARIO=38, WS=39;
	public static final int
		RULE_type_file = 0, RULE_program = 1, RULE_query = 2, RULE_cmd = 3, RULE_cmd_create = 4, 
		RULE_def_column = 5, RULE_length = 6, RULE_cmd_select = 7, RULE_cmd_where = 8, 
		RULE_cmd_insert = 9, RULE_cmd_drop = 10, RULE_cmd_delete = 11, RULE_cmd_export = 12, 
		RULE_val_input = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"type_file", "program", "query", "cmd", "cmd_create", "def_column", "length", 
			"cmd_select", "cmd_where", "cmd_insert", "cmd_drop", "cmd_delete", "cmd_export", 
			"val_input"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'XLSX'", "'CSV'", "'TXT'", "'PROC SQL;'", "'QUIT;'", "':'", "','", 
			null, null, null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "DATE", "PROCSQL", "QUIT", 
			"CREATETABLE", "SELECT", "PV", "FORMAT", "OPERADOR", "INT", "REAL", "VARCHAR", 
			"ERROR_VARCHAR", "BOOLEAN", "DATE9", "MES", "AS", "FROM", "WHERE", "AND", 
			"INSERT", "DROPTABLE", "ABREPARCH", "FECHAPARCH", "DELETE", "EXPORT", 
			"VALUES", "FILEPATH", "FILETYPE", "FILENAME", "IDENT", "COMENTARIO", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Alguma.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlgumaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Type_fileContext extends ParserRuleContext {
		public Type_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterType_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitType_file(this);
		}
	}

	public final Type_fileContext type_file() throws RecognitionException {
		Type_fileContext _localctx = new Type_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__3);
			setState(31);
			query();
			setState(32);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATETABLE) | (1L << SELECT) | (1L << INSERT) | (1L << DROPTABLE) | (1L << DELETE) | (1L << EXPORT))) != 0)) {
				{
				{
				setState(34);
				cmd();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public Cmd_createContext cmd_create() {
			return getRuleContext(Cmd_createContext.class,0);
		}
		public Cmd_selectContext cmd_select() {
			return getRuleContext(Cmd_selectContext.class,0);
		}
		public Cmd_insertContext cmd_insert() {
			return getRuleContext(Cmd_insertContext.class,0);
		}
		public Cmd_dropContext cmd_drop() {
			return getRuleContext(Cmd_dropContext.class,0);
		}
		public Cmd_deleteContext cmd_delete() {
			return getRuleContext(Cmd_deleteContext.class,0);
		}
		public Cmd_exportContext cmd_export() {
			return getRuleContext(Cmd_exportContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATETABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				cmd_create();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				cmd_select();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				cmd_insert();
				}
				break;
			case DROPTABLE:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				cmd_drop();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				cmd_delete();
				}
				break;
			case EXPORT:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				cmd_export();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_createContext extends ParserRuleContext {
		public TerminalNode CREATETABLE() { return getToken(AlgumaParser.CREATETABLE, 0); }
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public TerminalNode AS() { return getToken(AlgumaParser.AS, 0); }
		public List<Def_columnContext> def_column() {
			return getRuleContexts(Def_columnContext.class);
		}
		public Def_columnContext def_column(int i) {
			return getRuleContext(Def_columnContext.class,i);
		}
		public List<TerminalNode> PV() { return getTokens(AlgumaParser.PV); }
		public TerminalNode PV(int i) {
			return getToken(AlgumaParser.PV, i);
		}
		public Cmd_createContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_create; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_create(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_create(this);
		}
	}

	public final Cmd_createContext cmd_create() throws RecognitionException {
		Cmd_createContext _localctx = new Cmd_createContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmd_create);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(CREATETABLE);
			setState(49);
			match(IDENT);
			setState(50);
			match(AS);
			setState(51);
			def_column();
			setState(56);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52);
					match(PV);
					setState(53);
					def_column();
					}
					} 
				}
				setState(58);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(59);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Def_columnContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public TerminalNode FORMAT() { return getToken(AlgumaParser.FORMAT, 0); }
		public LengthContext length() {
			return getRuleContext(LengthContext.class,0);
		}
		public Def_columnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def_column; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterDef_column(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitDef_column(this);
		}
	}

	public final Def_columnContext def_column() throws RecognitionException {
		Def_columnContext _localctx = new Def_columnContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_def_column);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(IDENT);
			setState(62);
			match(T__5);
			setState(63);
			match(FORMAT);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ABREPARCH) {
				{
				setState(64);
				length();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LengthContext extends ParserRuleContext {
		public TerminalNode ABREPARCH() { return getToken(AlgumaParser.ABREPARCH, 0); }
		public TerminalNode INT() { return getToken(AlgumaParser.INT, 0); }
		public TerminalNode FECHAPARCH() { return getToken(AlgumaParser.FECHAPARCH, 0); }
		public LengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_length; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterLength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitLength(this);
		}
	}

	public final LengthContext length() throws RecognitionException {
		LengthContext _localctx = new LengthContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_length);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(ABREPARCH);
			setState(68);
			match(INT);
			setState(69);
			match(FECHAPARCH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_selectContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(AlgumaParser.SELECT, 0); }
		public List<TerminalNode> IDENT() { return getTokens(AlgumaParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AlgumaParser.IDENT, i);
		}
		public TerminalNode FROM() { return getToken(AlgumaParser.FROM, 0); }
		public TerminalNode PV() { return getToken(AlgumaParser.PV, 0); }
		public Cmd_whereContext cmd_where() {
			return getRuleContext(Cmd_whereContext.class,0);
		}
		public Cmd_selectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_select(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_select(this);
		}
	}

	public final Cmd_selectContext cmd_select() throws RecognitionException {
		Cmd_selectContext _localctx = new Cmd_selectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmd_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(SELECT);
			setState(72);
			match(IDENT);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(73);
				match(T__6);
				setState(74);
				match(IDENT);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(FROM);
			setState(81);
			match(IDENT);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(82);
				cmd_where();
				}
			}

			setState(85);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_whereContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(AlgumaParser.WHERE, 0); }
		public List<TerminalNode> IDENT() { return getTokens(AlgumaParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AlgumaParser.IDENT, i);
		}
		public List<TerminalNode> OPERADOR() { return getTokens(AlgumaParser.OPERADOR); }
		public TerminalNode OPERADOR(int i) {
			return getToken(AlgumaParser.OPERADOR, i);
		}
		public List<Val_inputContext> val_input() {
			return getRuleContexts(Val_inputContext.class);
		}
		public Val_inputContext val_input(int i) {
			return getRuleContext(Val_inputContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(AlgumaParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(AlgumaParser.AND, i);
		}
		public Cmd_whereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_where; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_where(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_where(this);
		}
	}

	public final Cmd_whereContext cmd_where() throws RecognitionException {
		Cmd_whereContext _localctx = new Cmd_whereContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmd_where);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(WHERE);
			setState(88);
			match(IDENT);
			setState(89);
			match(OPERADOR);
			setState(90);
			val_input();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(91);
				match(AND);
				setState(92);
				match(IDENT);
				setState(93);
				match(OPERADOR);
				setState(94);
				val_input();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_insertContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(AlgumaParser.INSERT, 0); }
		public List<TerminalNode> IDENT() { return getTokens(AlgumaParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(AlgumaParser.IDENT, i);
		}
		public List<TerminalNode> ABREPARCH() { return getTokens(AlgumaParser.ABREPARCH); }
		public TerminalNode ABREPARCH(int i) {
			return getToken(AlgumaParser.ABREPARCH, i);
		}
		public List<TerminalNode> FECHAPARCH() { return getTokens(AlgumaParser.FECHAPARCH); }
		public TerminalNode FECHAPARCH(int i) {
			return getToken(AlgumaParser.FECHAPARCH, i);
		}
		public TerminalNode VALUES() { return getToken(AlgumaParser.VALUES, 0); }
		public List<Val_inputContext> val_input() {
			return getRuleContexts(Val_inputContext.class);
		}
		public Val_inputContext val_input(int i) {
			return getRuleContext(Val_inputContext.class,i);
		}
		public TerminalNode PV() { return getToken(AlgumaParser.PV, 0); }
		public Cmd_whereContext cmd_where() {
			return getRuleContext(Cmd_whereContext.class,0);
		}
		public Cmd_insertContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_insert; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_insert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_insert(this);
		}
	}

	public final Cmd_insertContext cmd_insert() throws RecognitionException {
		Cmd_insertContext _localctx = new Cmd_insertContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmd_insert);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(INSERT);
			setState(101);
			match(IDENT);
			setState(102);
			match(ABREPARCH);
			setState(103);
			match(IDENT);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(104);
				match(T__6);
				setState(105);
				match(IDENT);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(FECHAPARCH);
			setState(112);
			match(VALUES);
			setState(113);
			match(ABREPARCH);
			setState(114);
			val_input();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(115);
				match(T__6);
				setState(116);
				val_input();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(FECHAPARCH);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(123);
				cmd_where();
				}
			}

			setState(126);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_dropContext extends ParserRuleContext {
		public TerminalNode DROPTABLE() { return getToken(AlgumaParser.DROPTABLE, 0); }
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public TerminalNode PV() { return getToken(AlgumaParser.PV, 0); }
		public Cmd_dropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_drop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_drop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_drop(this);
		}
	}

	public final Cmd_dropContext cmd_drop() throws RecognitionException {
		Cmd_dropContext _localctx = new Cmd_dropContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmd_drop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(DROPTABLE);
			setState(129);
			match(IDENT);
			setState(130);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cmd_deleteContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(AlgumaParser.DELETE, 0); }
		public TerminalNode IDENT() { return getToken(AlgumaParser.IDENT, 0); }
		public Cmd_whereContext cmd_where() {
			return getRuleContext(Cmd_whereContext.class,0);
		}
		public TerminalNode PV() { return getToken(AlgumaParser.PV, 0); }
		public Cmd_deleteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd_delete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).enterCmd_delete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlgumaListener ) ((AlgumaListener)listener).exitCmd_delete(this);
		}
	}

	public final Cmd_deleteContext cmd_delete() throws RecognitionException {
		Cmd_deleteContext _localctx = new Cmd_deleteContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cmd_delete);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(DELETE);
			setState(133);
			match(IDENT);
			setState(134);
			cmd_where();
			setState(135);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
